--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,9 +1,17 @@
 # main links
-main:
-  - title: "Quick-Start Guide"
-    url: https://mmistakes.github.io/minimal-mistakes/docs/quick-start-guide/
-  # - title: "About"
-  #   url: https://mmistakes.github.io/minimal-mistakes/about/
+main: 
+  - title: "Home"
+    url: /
+  # - title: "Research"
+  #   url: /research/
+  - title: "Publications"
+    url: /publication/
+  - title: "Talks"
+    url: /talk/
+  - title: "Teaching"
+    url: /teaching/
+  - title: 'Posts'
+    url: /posts/
   # - title: "Sample Posts"
   #   url: /year-archive/
   # - title: "Sample Collections"
