--- a/_config.yml
+++ b/_config.yml
@@ -125,7 +125,7 @@ plugins:
 # Site Author
 author:
   name             :  
-  avatar           : "/assets/images/bio.jpeg"
+  avatar           : "/assets/images/ying-2.jpg"
   bio              : |
     Wojcicki-Troper Postdoc Fellow   
     @ HDSI & HMS    
