--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -4,7 +4,7 @@ main:
     url: /
   # - title: "Research"
   #   url: /research/
-  - title: "Publications"
+  - title: "Research"
     url: /publication_year/
   - title: "Talks"
     url: /talk/
